[package]
name = "cornostr"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3"
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = { version = "0.29.0", features = ["global-context", "rand-std", "serde"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.11.0-pre.4"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
url = "2.5"